Fixes Comment View Modal Display On Mobile

--- a/app/assets/stylesheets/salt_spray_tests.scss
+++ b/app/assets/stylesheets/salt_spray_tests.scss
@@ -92,6 +92,7 @@
 
   .comment-block {
     padding-top: 2px;
+    padding-bottom: 3px;
   }
 
   .commenter-initials {
